# GINSA

./: GINSA.ipynb  GINSA.py  GINSA_commandline.py  GINSA_gui.py  LICENSE  README.md  RUN_GINSA.ipynb  RUN_GINSA.py  RUN_GINSA_v2.ipynb  RUN_GINSA_v3.ipynb  RUN_GINSA_v4.ipynb  RUN_GINSA_v5.ipynb  RUN_GINSA_v6.ipynb  SUFFIX_ADDER.py  longissima.fasta  plots.py  pyproject.toml  requirements.txt  setup.py
docs/: occurrences.csv  seq_master.fasta
misc/: plots.py
src/: GINSA.py
src/GINSA/: GINSA_cli.py  GINSA_gui.py  __init__.py
tests/: suffix_adder.py
