[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "GINSA"
authors = [
    {name = "Eric Odle", email = "eo@hokudai.me.uk"},
]
description = "GINSA"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.6"
version = "0.1.0"

[project.scripts]
GINSA_gui = "GINSA.GINSA_gui:main"
